--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -1,6 +1,12 @@
 ---
-title: "Metagenomic EDA of Fecal Samples"
-format: pdf
+title: "Exploratory Data Analysis"
+subtitle: "Metagenomic Analysis of Fecal Samples as a Differential Diagnostic Tool for Colorectal Cancer"
+format: 
+  pdf:
+    header-includes:
+      - \setkomafont{title}{\Large\bfseries}
+      - \setkomafont{author}{\normalsize}
+      - \setkomafont{date}{\small}
 author:
     - name: Kaitlyn Schisler
     - name: Cory Spern
@@ -168,90 +174,75 @@ Yada Yada Yada
 
 Of great benefit to having the cMD3 database is the standardization of the metadata, allowing for the analysis of potential confounding variables for biases and major discrepancies in the data that may influence the results and interpretations downstream. With prior evidence supporting age, gender, diet, geographical location, BMI, and drinking and smoking habits are all factors that may influence the relative risk of CRC (SOURCE), they are important variables to consider in our initial EDA, checking for bias in distribution and sources of significance.
 
-##### Normality and Summary Statistics
+##### Age, Gender, and CRC Progression Classifiers
 
-All samples included contain information regarding the age, which is important considering it being one of the factors in CRC screening and preventative care (SOURCE). Summary statistics were conducted (Appendix 1-A), showing a mean age of 59, standard deviation of 14.75, and median of 63, suggesting a skew in this continuous variable. When faceted by gender (Appendix 1-B), aside from the proportion of males and females being statistically different from each other (41.1% female, **CALCULATE P VALUE?**), the median, mean, and quartiles are not remarkably different. A quantile-quantile (QQ) plot (Figure 1-A) and histogram (Figure 1-B) were generated to corroborate this information, checking for extreme skewedness. These show that while there is a slight left tailed skew in age with a bimodal pattern , it is not to an extreme that would harm our final model detrimentally. Random Forest models are robust to skew (SOURCE). Skew and variance of age was also checked between the sexes via a faceted histogram, which can be found in the supplementary visualizations (Appendix 2-A).
+All samples included contain information regarding the age and gender, which is important considering they are some of the factors in CRC screening and preventative care (SOURCE). Summary statistics were conducted (Appendix 1-A), showing a mean age of 59, standard deviation of 14.75, and median of 63, suggesting a skew in this continuous variable. When faceted by gender (Appendix 1-B), aside from the proportion of males and females being statistically different from each other (41.1% female, p = 5.821e-14, Appendix 1-B and 3-A), the median, mean, and quartiles are not remarkably different. A histogram (Figure 1-A) and box plot by CRC progression classifier (Figure 1-B) were generated to corroborate this information, checking for extreme skewedness. These show that while there is a slight left tailed skew in age overall with a bimodal pattern, seemingly caused by the healthy controls visible in the box plot, it is not to an extreme that would harm our final model detrimentally. Random Forest models are robust to skew (SOURCE). Skew and variance of age was also checked between the sexes via a faceted histogram, which can be found in the supplementary visualizations (Appendix 2-A). Since the sample size is large, the central limit theorem allows for an ANOVA to be performed despite the slight skew, which was done to a 95% confidence level. This was to assess if there is a statistical difference in the mean age of the groups as a compliment to the box plot (Appendix 3-B). The p-value was \<2e-16, and a follow-up Tukey’s Honest Significant Difference (HSD) test was conducted to determine which pairings were significantly different from each other. The following pairings with "HC" were statistically different: "Other", "PA", "PA+", "CRC", and "CRC+" (all p-values \<0.000, Appendix 3-B). All other differences in age between the CRC progression classifiers showed no statistical significance at a 95% confidence interval.
 
 ```{r, echo=FALSE}
-#| label: Normality Check Age Plain
+#| label: Age Normality & CRC Variation across Age/Gender
+#| fig-width: 14
+#| fig-height: 9
+#| fig-dpi: 500
 # ---
 
-# QQPlot
-########
-normality1 <- qualifying_studies %>% 
-  # Set Up
-  # ------
-  filter(!is.na(age)) %>%
-  # Plotting
-  # --------
-  ggplot(aes(sample = age)) + 
-  geom_qq(size = 1, alpha = 0.8) + 
-  geom_qq_line() +
-  # Labeling
-  #---------
-  labs(title = "QQ Plot of Age") +
-  theme(plot.title = element_text(hjust = 0, size = 10), 
-        axis.title = element_text(size = 10))
+# NORMALITY ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#########################################
 
 # Histogram
 ###########
-normality2 <- qualifying_studies %>%
+normality1 <- qualifying_studies %>%
   # Set Up
   # ------
-  filter(!is.na(age)) %>%
+filter(!is.na(age)) %>%
   # Plotting
   # --------
-  ggplot(aes(x = age)) + 
+ggplot(aes(x = age)) + 
   geom_histogram(bins=20) + 
   # Labeling
   #---------
-  labs(title = "Distribution of Age", x = "Age", y = "Count") +
+labs(title = "Distribution of Age: Overall", x = "Age", y = "Count") +
   theme(plot.title = element_text(hjust = 0, size = 10), 
         axis.title = element_text(size = 10))
 
-# Display
-#########
+# Box Plot: Normality by CRC Category
+#####################################
+normality2 <- qualifying_studies %>%   
+  # Set Up   
+  # ------   
+  filter(!is.na(age)) %>%   
+  # Plotting   
+  # --------   
+  ggplot(aes(x=disease_class, y=age)) +    
+  geom_boxplot(outlier.shape = NA) +   
+  geom_jitter(alpha = 0.05, width = 0.15) +   
+  stat_summary(fun = mean, geom = "point", shape = 20, size = 5, color = "red") +
+  # Labeling   
+  #--------- 
+  labs(title = "Distribution of Age: By CRC Progression Classifier", 
+       x = "CRC Progression Classifier", y = "Age") +
+  theme(plot.title = element_text(hjust = 0, size = 10), 
+        axis.title = element_text(size = 10))
 
-normality_caption <- str_wrap(
-  "(A) QQ plot showing slight deviation from the normality line, indicating mild skew. 
-   (B) Histogram demonstrating a bimodal age distribution with a secondary peak near 25 years and a primary peak near 60 years.",
-  width = 95 # maximum width
-)
-
-(normality1 | normality2) +
-  plot_annotation(
-    title = "Figure 1: Overall Age Normality Check",
-    tag_levels = "A",
-    caption = normality_caption
-  ) +
-  theme(
-    plot.title = element_text(hjust = 0, size = 10),
-    plot.caption = element_text(hjust = 0, size = 8)
-  )
-```
-
-```{r, echo=FALSE}
-#| label: CRC Progression Classifier Spread
-# ---
-
+# CRC ACROSS AGE/GENDER ~~~~~~~~~~~~~~~~~
+#########################################
 # Barplot of age categories: Colored
 ####################################
+
 decade1 <- qualifying_studies %>% 
   # Set Up 
   # ------ 
-  filter (!is.na(age_decade)) %>% 
+filter (!is.na(age_decade)) %>% 
   # Plotting 
   # -------- 
-  ggplot(aes(x=age_decade, fill = disease_class)) + 
+ggplot(aes(x=age_decade, fill = disease_class)) + 
   geom_bar() + 
   scale_fill_manual(values = progression_colors, 
                     name = "CRC Progression \nClassifiers") + 
   # Labeling 
   #--------- 
-  theme(axis.text.x = element_text(angle = 30, hjust = 1, lineheight = 1.1), 
-        axis.title.x = element_text(hjust = 0.5), 
-        plot.title = element_text(size = 11),
-        legend.position = "none") + 
+theme(
+      axis.title.x = element_text(hjust = 0.5), 
+      plot.title = element_text(size = 11)) + 
   labs(
     title = "Age Distribution By Decade", 
     x = "Age by Decade", y = "Count")
@@ -261,20 +252,18 @@ decade1 <- qualifying_studies %>%
 decade2 <- qualifying_studies %>%
   # Set Up
   # ------
-  filter (!is.na(age_decade)) %>%
+filter (!is.na(age_decade)) %>%
   # Plotting
   # --------
-  ggplot(aes(x=age_decade, fill = disease_class)) +
+ggplot(aes(x=age_decade, fill = disease_class)) +
   geom_bar(position="fill") +
   scale_fill_manual(values = progression_colors, 
                     name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
-  labs(title = "Proportion of CRC Progression by Age Decade",
-       x = "Age By Decade", y = "Proportion") +
-  theme(axis.text.x = element_text(
-    angle = 30, hjust = 1, lineheight = 1.1), 
-    legend.position = "none", 
+labs(title = "CRC Progression Proportion by Age Decade",
+     x = "Age By Decade", y = "Proportion") +
+  theme(
     plot.title = element_text(size = 11)
   )
 
@@ -283,44 +272,61 @@ decade2 <- qualifying_studies %>%
 decade3 <- qualifying_studies %>%
   # Set Up
   # ------
-  filter(!is.na(age_decade), !is.na(gender)) %>%
+filter(!is.na(age_decade), !is.na(gender)) %>%
   # Plotting
   # --------
-  ggplot(aes(x = age_decade, fill = disease_class)) + 
+ggplot(aes(x = age_decade, fill = disease_class)) + 
   geom_bar(position = "fill") +
   scale_fill_manual(values = progression_colors, 
                     name = "CRC Progression \nClassifiers") +
   facet_wrap(~gender) +
   # Labeling
   #---------
-  labs(title = "Proportion of CRC Progression by Age Decade, \nGrouped by Gender", 
-       x = "Age by Decade", y = "Proportion") +
-  theme(axis.text.x = element_text(angle = 25, hjust = 1, lineheight = 1.1), 
+labs(title = "CRC Progression Proportion by Age Decade, Grouped by Gender", 
+     x = "Age by Decade", y = "Proportion") +
+  theme( 
         legend.position = "none", 
         plot.title = element_text(size = 12))
 
-# Age by Decade Patchwork
-#########################
+###################
+# Display Patchwork
+###################
 layout1 <- c( # t, l , b = t, r = l
   area(1, 1, 2, 2), 
-  area(1, 3, 2, 4), 
-  area(3, 1, 4, 4)
+  area(1, 3, 2, 4),
+  area(3, 1, 4, 2), 
+  area(3, 3, 4, 4),
+  area(5, 1, 7, 4), 
+  area(5, 5, 7, 5)
 )
 
 #plot(layout1)
 
-decade1 + decade2 + decade3 + plot_layout(design = layout1, guides = "collect") +
+age_gender_caption <- str_wrap(
+  "(A) Histogram demonstrating a bimodal age distribution with a secondary peak near 25 years and a primary peak near 60 years. 
+   (B) Box plot of age across CRC progression classifiers, with jittered transluscent points to demonstrate spread of the sample. This effectively displays the main contributor to the skew is coming from the HC group, with the dense cluster of points at approximately 25 years. The red dot represents the mean, the line represents the median.
+   (C) Barplot of Age distribution by decade. Note that the first decade range includes 18-20 to avoid a bar of those only 18 and 19 years old.
+   (D) Barplot displaying overall proportion of the CRC progression classifiers across each decade.
+   (E) Barplot displaying the gender faceted proportion of CRC progression classifiers across each decade. Notable differences include and visual increase in HC from 18-69 for females, and increased PA and CRC/CRC+ across most decades in males.", 
+  width = 200
+)
+
+normality1 + normality2 + decade1 + decade2 + decade3 + guide_area() + 
+  plot_layout(design = layout1, guides = "collect", widths = c(1,1,1,1,0.7)) +
   plot_annotation(
-    title = "Figure 2: CRC Progression Classification Variability",
+    title = "Figure 1: Age Normality & CRC Variation across Age and Gender",
     tag_levels = "A",
-    caption = "Placeholder Caption"
-  ) +
-  theme(legend.position = "right", 
-    plot.title = element_text(hjust = 0, size = 10),
-    plot.caption = element_text(hjust = 0, size = 8), 
-    legend.key.size = unit(0.25, "cm")
+    caption = age_gender_caption
+  ) &
+  theme(
+        plot.title = element_text(hjust = 0, size = 14),
+        plot.caption = element_text(hjust = 0, size = 10), 
+        legend.key.size = unit(0.4, "cm"), 
+        legend.title = element_text(size = 10)
   )
 ```
+
+After checking normality of the data, the age was divided into decades, with those 18 and 19 years old included in the 20-29 group to avoid a decade being visualized with only two years represented, and all those 80 years or older being grouped together as there was only one individual above 89 years. The decade separations represented by Figure 1-C clearly shows the two least represented decades in this study will be the 80+ and 30-39 decades (2.7% and 4.0%, respectively) and the three most represented being 60-69, 70-79, and 50-59 (34.4%, 21.8%, 19.9%, respectively; Appendix 1-C). Figure 1-D and 1-E represent this data in proportions for easier comparisons across the decades, with 1-E faceted by gender. It is well established that males have a higher relative risk of CRC than females (SOURCE), which appears to be reflected across most age groups. Visually, there appears to be far less samples with recorded comorbidities, represented by the "plus", as well as relatively less "PA" compared to "CRC" and "HC" overall.
 
 #### Taxa & Pathway Analysis (Cory)
 
