--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -176,7 +176,7 @@ Of great benefit to having the cMD3 database is the standardization of the metad
 
 ##### Age, Gender, and CRC Progression Classifiers
 
-All samples included contain information regarding the age and gender, which is important considering they are some of the factors in CRC screening and preventative care (SOURCE). Summary statistics were conducted (Appendix 1-A), showing a mean age of 59, standard deviation of 14.75, and median of 63, suggesting a skew in this continuous variable. When faceted by gender (Appendix 1-B), aside from the proportion of males and females being statistically different from each other (41.1% female, p = 5.821e-14, Appendix 1-B and 3-A), the median, mean, and quartiles are not remarkably different. A histogram (Figure 1-A) and box plot by CRC progression classifier (Figure 1-B) were generated to corroborate this information, checking for extreme skewedness. These show that while there is a slight left tailed skew in age overall with a bimodal pattern, seemingly caused by the healthy controls visible in the box plot, it is not to an extreme that would harm our final model detrimentally. Random Forest models are robust to skew (SOURCE). Skew and variance of age was also checked between the sexes via a faceted histogram, which can be found in the supplementary visualizations (Appendix 2-A). Since the sample size is large, the central limit theorem allows for an ANOVA to be performed despite the slight skew, which was done to a 95% confidence level. This was to assess if there is a statistical difference in the mean age of the groups as a compliment to the box plot (Appendix 3-B). The p-value was \<2e-16, and a follow-up Tukey’s Honest Significant Difference (HSD) test was conducted to determine which pairings were significantly different from each other. The following pairings with "HC" were statistically different: "Other", "PA", "PA+", "CRC", and "CRC+" (all p-values \<0.000, Appendix 3-B). All other differences in age between the CRC progression classifiers showed no statistical significance at a 95% confidence interval.
+All samples included contain information regarding the age and gender, which is important considering they are some of the factors in CRC screening and preventative care (SOURCE). Summary statistics were conducted (Appendix 1-A), showing a mean age of 59, standard deviation of 14.75, and median of 63, suggesting a skew in this continuous variable. When faceted by gender (Appendix 1-B), aside from the proportion of males and females being statistically different from each other (41.1% female, p = 5.821e-14, Appendix 1-B and 3-A), the median, mean, and quartiles are not remarkably different. A histogram (Figure 1-A) and box plot by CRC progression classifier (Figure 1-B) were generated to corroborate this information, checking for extreme skewedness (supporting Q-Q plot available in Appendix 2-B). These show that while there is a slight left tailed skew in age overall with a bimodal pattern, seemingly caused by the healthy controls visible in the box plot, it is not to an extreme that would harm our final model detrimentally. Random Forest models are robust to skew (SOURCE). Skew and variance of age was also checked between the sexes via a faceted histogram, which can be found in the supplementary visualizations (Appendix 2-A). Since the sample size is large, the central limit theorem allows for an ANOVA to be performed despite the slight skew, which was done to a 95% confidence level. This was to assess if there is a statistical difference in the mean age of the groups as a compliment to the box plot (Appendix 3-B). The p-value was \<2e-16, and a follow-up Tukey’s Honest Significant Difference (HSD) test was conducted to determine which pairings were significantly different from each other. The following pairings with "HC" were statistically different: "Other", "PA", "PA+", "CRC", and "CRC+" (all p-values \<0.000, Appendix 3-B). All other differences in age between the CRC progression classifiers showed no statistical significance at a 95% confidence interval.
 
 ```{r, echo=FALSE}
 #| label: Age Normality & CRC Variation across Age/Gender
@@ -327,6 +327,196 @@ normality1 + normality2 + decade1 + decade2 + decade3 + guide_area() +
 ```
 
 After checking normality of the data, the age was divided into decades, with those 18 and 19 years old included in the 20-29 group to avoid a decade being visualized with only two years represented, and all those 80 years or older being grouped together as there was only one individual above 89 years. The decade separations represented by Figure 1-C clearly shows the two least represented decades in this study will be the 80+ and 30-39 decades (2.7% and 4.0%, respectively) and the three most represented being 60-69, 70-79, and 50-59 (34.4%, 21.8%, 19.9%, respectively; Appendix 1-C). Figure 1-D and 1-E represent this data in proportions for easier comparisons across the decades, with 1-E faceted by gender. It is well established that males have a higher relative risk of CRC than females (SOURCE), which appears to be reflected across most age groups. Visually, there appears to be far less samples with recorded comorbidities, represented by the "plus", as well as relatively less "PA" compared to "CRC" and "HC" overall.
+
+##### Country, Ethnicity, Diet, and BMI
+
+While country also contains data for all samples in our study, ethnicity and diet are minimally provided in
+
+```{r, echo=FALSE}
+#| label: Countries, Diet, and BMI associations
+
+# Countries ~~~~~~~~~~~~~~~~
+############################
+
+# Country Count
+###############
+country1 <- qualifying_studies  %>% 
+  # Set Up
+  # ------
+  filter(!is.na(country)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(country, country, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar() +
+  # Labeling
+  #---------
+  geom_text(stat = "count", aes(label = after_stat(count)), 
+            vjust = -0.21, size = 3, color = "black") +
+  theme(axis.text.x = element_text(angle = 30, hjust = 0.9, lineheight = 1.1), 
+        axis.title.x = element_text(hjust = -0.75)) +
+  xlab("Country (NATO country code, trigram)") + 
+  labs(
+    title = "Country Sample Count Distribution", 
+    subtitle = "With and Without CRC Progression Classifiers")
+
+# Country Fill
+##############
+country2 <- qualifying_studies  %>% 
+  # Set Up
+  # ------
+  filter(!is.na(country)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(country, country, 
+                         FUN = function(x) -length(x)), 
+             fill=disease_class)) + 
+  geom_bar() +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression \nClassifiers") +
+  # Labeling
+  #---------
+  theme(axis.text.x = element_text(angle = 30, hjust = 0.9, lineheight = 1.1),
+    axis.title.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.text.y = element_blank()
+  )
+
+# Countries Proportions
+#######################
+country3 <- qualifying_studies %>% 
+  # Set Up
+  # ------
+  filter(!is.na(country)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(country, country, 
+                         FUN = function(x) -length(x)), fill = disease_class)) + 
+  geom_bar(position = "fill") +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression \nClassifiers") +
+  # Labeling
+  #---------
+  ggtitle("Proportion of CRC Progression Per Country") +
+  labs(x = "Country (NATO country code, trigram)", y = "Proportion")
+
+# Diet ~~~~~~~~~~~~~~~~~~~~~
+############################
+
+# Diet Counts
+#############
+diet1 <- qualifying_studies %>%
+  # Set Up
+  # ------
+  filter(!is.na(diet)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(diet, diet, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class)) +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifiers") +
+  # Labeling
+  #---------
+  geom_text(stat = "count", aes(label = after_stat(count)), vjust = -0.17, color = "black") +
+  ggtitle("Diet of Individuals") +
+  labs(x = "Diet", y = "Counts")
+
+# Diet Proportion
+#################
+diet2 <- qualifying_studies %>%
+  # Set Up
+  # ------
+  filter(!is.na(diet)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(diet, diet, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class), position = "fill") +
+  scale_fill_manual(values = progression_colors, name = "CRC Progression \nClassifiers") +
+  # Labeling
+  #---------
+  ggtitle("Diet of Individuals") +
+  labs(x = "Diet", y = "Proportion")
+
+# BMI ~~~~~~~~~~~~~~~~~~~~~~
+############################
+
+# Box Plot 
+##########
+bmi1 <- qualifying_studies %>%   
+  # Set Up   
+  # ------   
+  filter(!is.na(BMI)) %>%   
+  # Plotting   
+  # --------   
+  ggplot(aes(x=disease_class, y=BMI)) +    
+  geom_boxplot(outlier.shape = NA) +   
+  geom_jitter(alpha = 0.15, width = 0.15) +   
+  stat_summary(fun = mean, geom = "point", shape = 20, size = 5, color = "red") +
+  # Labeling   
+  #---------   
+  ggtitle("Distribution of BMI by CRC Progression Classifier") +   
+  ylab("BMI") +    xlab("CRC Progression \nClassifiers")  
+
+# Scatterplot by CRC Progression 
+################################
+bmi2 <- qualifying_studies %>%   
+  # Set Up   
+  # ------   
+  filter (!is.na(age), !is.na(BMI)) %>%   
+  # Plotting   
+  # --------   
+  ggplot(aes(x=age, y=BMI)) +    
+  geom_point(aes(color = disease_class,)) + 
+  geom_smooth(method = "lm", color = "grey40") +
+  scale_color_manual(values = progression_colors, name = "CRC Progression \nClassifiers") +
+  facet_wrap(~disease_class, ) +
+  # Labeling   
+  #---------   
+  ggtitle("Age by BMI, Colored by CRC Progression Classifier") +   
+  ylab("BMI") +    
+  xlab("Age")
+
+# Display
+#########
+layout2 <- c( # t, l , b = t, r = l
+  area(1, 1, 2, 2),
+  area(1, 3, 2, 4),
+  area(1, 5, 2, 6),
+  area(3, 1, 4, 2), 
+  area(3, 3, 4, 4),
+  area(3, 5, 4, 5), 
+  area(5, 1, 7, 3), 
+  area(5, 4, 7, 6)
+)
+
+#plot(layout2)
+
+geography_BMI_caption <- str_wrap(
+  "(A)  
+   (B) 
+   (C) 
+   (D) 
+   (E) 
+   (F)
+   (G)", 
+  width = 200
+)
+
+country1 + country2 + country3 + diet1 + diet2 + guide_area() + bmi1 + bmi2
+  plot_layout(design = layout1, guides = "collect", widths = c(1,1,1,1,0.7)) +
+  plot_annotation(
+    title = "Figure 2: Country, Diet, and BMI Associations with CRC Progression Classifiers",
+    tag_levels = "A",
+    caption = geography_BMI_caption
+  ) &
+  theme(
+        plot.title = element_text(hjust = 0, size = 14),
+        plot.caption = element_text(hjust = 0, size = 10), 
+        legend.key.size = unit(0.4, "cm"), 
+        legend.title = element_text(size = 10)
+  )
+```
 
 #### Taxa & Pathway Analysis (Cory)
 
