--- a/EDA/Group_Appendix.qmd
+++ b/EDA/Group_Appendix.qmd
@@ -66,7 +66,7 @@ qualifying_studies <- qualifying_studies %>%
 
 2.  Supplemental Visualizations & Related Code
 
-    1.   A - Age Histogram Faceted by Gender
+    1.  A - Age Histogram Faceted by Gender
 
 3.  Statistical Analyses
 
@@ -198,9 +198,82 @@ age_decade %>%
   column_spec(1, bold = T)
 ```
 
+### 1-D: Country Summary Statistics
+
+```{r}
+#| label: Country Summary Statistics
+
+# Count and Proportion
+######################
+country_overall <- qualifying_studies %>% 
+  # Summary Stats
+  # -------------
+  group_by(country) %>% 
+  summarize(
+  n = n(), 
+  .groups = "drop") %>% 
+  mutate(
+    pct = 100 * n / sum(n),
+    `N (%)` = sprintf("%d (%.1f%%)", n, pct)
+  ) %>% 
+  arrange('Country')
+
+# Kable Table
+#############
+country_overall %>% 
+  select(country, `N (%)`) %>%
+  kbl(
+    col.names = c("Country", "N (%)"),
+      caption = "Country Overall Summary (NATO country code, trigram)", format = "html", digits = 2) %>%
+  kable_styling(full_width = F) %>% 
+  column_spec(1, bold = T)
+
+# Country Classifier Count
+##########################
+country_overall <- qualifying_studies %>% 
+  filter(!is.na(country)) %>%
+  group_by(country, disease_class) %>% 
+  summarise(n = n(), .groups = "drop") %>% 
+  arrange(country, desc(n))
+
+# Classifier Kable Table
+########################
+country_overall %>% 
+  kbl(col.names = c("Country", "CRC Classifier", "Count"),
+      caption = "Country CRC Progression Summary (NATO country code, trigram)", 
+      format = "html") %>%
+  kable_styling(full_width = F) %>% 
+  column_spec(1, bold = T) %>% 
+  collapse_rows(columns = 1, valign = "top")
+
+```
+
 ## Appendix 2 - Supplemental Visualizations
 
-### 2-A: Age Histogram by Gender
+### 2-A: Age QQ-Plot (Supports Histogram)
+
+```{r}
+#| label: Age Normality Check - QQ Plot
+
+# QQPlot
+########
+qualifying_studies %>% 
+  # Set Up
+  # ------
+filter(!is.na(age)) %>%
+  # Plotting
+  # --------
+ggplot(aes(sample = age)) + 
+  geom_qq(size = 1, alpha = 0.8) + 
+  geom_qq_line() +
+  # Labeling
+  #---------
+labs(title = "QQ Plot of Age") +
+  theme(plot.title = element_text(hjust = 0, size = 10), 
+        axis.title = element_text(size = 10))
+```
+
+### 2-B: Age Histogram by Gender
 
 ```{r}
 #| label: Age Normality Check - Gendered
@@ -223,27 +296,111 @@ qualifying_studies %>%
         axis.title = element_text(size = 10))
 ```
 
-### 2-B: Age QQ-Plot (Supports Histogram)
+### 2-C: Age Distribution and Proportion By Decade
 
 ```{r}
-#| label: Age Normality Check - QQ Plot
+#| label: Age Distribution and Proportion By Decade
+#| fig-width: 14
+#| fig-height: 9
+#| fig-dpi: 500
+# Barplot of age categories: Colored
+####################################
 
-# QQPlot
-########
-qualifying_studies %>% 
+decade1 <- qualifying_studies %>% 
+  # Set Up 
+  # ------ 
+filter (!is.na(age_decade)) %>% 
+  # Plotting 
+  # -------- 
+ggplot(aes(x=age_decade, fill = disease_class)) + 
+  geom_bar() + 
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression \nClassifiers") + 
+  # Labeling 
+  #---------
+  labs(
+    title = "Age Distribution By Decade", 
+    x = "Age by Decade", y = "Count")
+
+# Proportion: Age Decade
+###########################
+decade2 <- qualifying_studies %>%
   # Set Up
   # ------
-filter(!is.na(age)) %>%
+filter (!is.na(age_decade)) %>%
   # Plotting
   # --------
-ggplot(aes(sample = age)) + 
-  geom_qq(size = 1, alpha = 0.8) + 
-  geom_qq_line() +
+ggplot(aes(x=age_decade, fill = disease_class)) +
+  geom_bar(position="fill") +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression \nClassifiers") +
   # Labeling
   #---------
-labs(title = "QQ Plot of Age") +
-  theme(plot.title = element_text(hjust = 0, size = 10), 
-        axis.title = element_text(size = 10))
+labs(title = "CRC Progression Proportion by Age Decade",
+     x = "Age By Decade", y = "Proportion")
+
+# Patchwork
+(decade1 | decade2) + plot_layout(guides = "collect") &
+  theme(legend.position = "bottom")
+
+```
+
+### 2-D: Diet Bar Plots
+
+```{r}
+#| label: Diet counts and Proportion
+#| fig-width: 14
+#| fig-height: 9
+#| fig-dpi: 500
+# Diet ~~~~~~~~~~~~~~~~~~~~~
+############################
+
+# Diet Counts
+#############
+diet1 <- qualifying_studies %>%
+  # Set Up
+  # ------
+  filter(!is.na(diet)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(diet, diet, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class)) +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression Classifiers") +
+  # Labeling
+  #---------
+  geom_text(stat = "count", aes(label = after_stat(count)), 
+            vjust = -0.17, color = "black") +
+  ggtitle("Diet of Individuals") +
+  labs(title = "Diet of Individuals",
+       x = "Diet", 
+       y = "Counts")
+
+# Diet Proportion
+#################
+diet2 <- qualifying_studies %>%
+  # Set Up
+  # ------
+  filter(!is.na(diet)) %>%
+  # Plotting
+  # --------
+  ggplot(aes(x = reorder(diet, diet, 
+                         FUN = function(x) -length(x)))) + 
+  geom_bar(aes(fill = disease_class), position = "fill") +
+  scale_fill_manual(values = progression_colors, 
+                    name = "CRC Progression Classifiers") +
+  # Labeling
+  #---------
+  labs(
+    title = "Diet of Individuals",
+    x = "Diet", 
+    y = "Proportion")
+
+# Patchwork
+###########
+(diet1 | diet2) + plot_layout(guides = "collect") &
+  theme(legend.position = "bottom")
 ```
 
 ## Appendix 3 - Statistical Analyses
@@ -274,12 +431,31 @@ summary(age_CRC_ANOVA2)
 TukeyHSD(age_CRC_ANOVA2, conf.level=.95)
 ```
 
-### 3-C: Age Decade and CRC Progression Classifier Chi-Squared
+### 3-C: CRC Progression Classifier and BMI ANOVA
 
 ```{r}
-#| label: Decade X CRC Classifier Chi Square
+#| label: Age vs CRC Progression ANOVA
 
-chisq.test(table(qualifying_studies$age_decade, qualifying_studies$disease_class))
+bmi_CRC_ANOVA <- qualifying_studies %>%
+  filter(!is.na(BMI)) 
+
+bmi_CRC_ANOVA2 <- aov(BMI ~ disease_class, data = bmi_CRC_ANOVA)
+  
+summary(bmi_CRC_ANOVA2)
+
+TukeyHSD(bmi_CRC_ANOVA2, conf.level=.95)
+```
+
+### 3-D: Linear Regression Model by CRC Progression Classifier
+
+```{r}
+#| label: LM to match faceted scatterplot
+
+age_bmi_scatterplot_lm <- lm(BMI ~ age * disease_class, 
+               data = qualifying_studies)
+
+summary(age_bmi_scatterplot_lm)
+
 ```
 
 ## Appendix 4 - Relevant R Scripts
