--- a/EDA/Group_EDA.qmd
+++ b/EDA/Group_EDA.qmd
@@ -259,7 +259,7 @@ layout1 <- c( # t, l , b = t, r = l
 
 age_gender_caption <- str_wrap(
   "(A) Histogram demonstrating a bimodal age distribution with a secondary peak near 25 years and a primary peak near 60 years. 
-   (B) Box plot of age across CRC progression classifiers, with jittered transluscent points to demonstrate spread of the sample. This effectively displays the main contributor to the skew is coming from the HC group, with the dense cluster of points at approximately 25 years. The red dot represents the mean, the line represents the median.
+   (B) Box plot of age across CRC progression classifiers, with jittered transluscent points to demonstrate spread of the sample. The red dot represents the mean, the line represents the median.
    (C) Bar plot displaying the gender faceted proportion of CRC progression classifiers across each decade. Notable differences include and visual increase in HC from 18-69 for females, and increased PA and CRC/CRC+ across most decades in males.", 
   width = 200
 )
@@ -273,15 +273,15 @@ normality1 + normality2 + decade1 + guide_area() +
   ) &
   theme(
         plot.title = element_text(hjust = 0, size = 14),
-        plot.caption = element_text(hjust = 0, size = 10), 
+        plot.caption = element_text(hjust = 0, size = 12), 
         legend.key.size = unit(0.4, "cm"), 
-        legend.title = element_text(size = 10)
+        legend.title = element_text(size = 12)
   )
 ```
 
-BMI is often associated with disease states (SOURCE) and is also a variable to be heavily considered when modelling. We examined the distribution of the BMI among the CRC progression classifiers (Figure 2-A) and while there were a few outliers, particularly in the upper BMI bounds of the "PA", "PA+", and "CRC" classifiers, there are visually striking differences among the means of the groupings, particularly those with comorbidities. To confirm, an ANOVA was ran (Appendix 3-C) which was found to be be statistically significant (95% confidence, p = \<2e-16), warranting a Tukey's HSD for further investigation. Of 21 pairings, 13 were found to be statistically significant to a 95% confidence level, meaning BMI could have an impact. It appears to have the most impact on "CRC-H" (5 pairings), "Other" (4 pairings), and "CRC" (4 pairings). BMI and age are also known to influence each other, thus it was decided to check if there would be any clustering or relationship visible when plotted against one another, shown in Figure 2-B. Associated linear models were conducted for each CRC progression classifier to check for potential relationships, which are also represented on the scatter plots (Appendix 3-D). Results of the age-centered, linear regression modelling shows a very low R-squared value of 0.0707, meaning that BMI and age only explains about 7% of the variance, though there are a few relationships that show statistical significance to a 95% confidence level, such as in "CRC-H" and "Other".
+BMI is often associated with disease states (SOURCE) and is also a variable to be heavily considered when modelling. We examined the distribution of the BMI among the CRC progression classifiers (Figure 2-A) and while there were a few outliers, particularly in the upper BMI bounds of the "PA", "PA+", and "CRC" classifiers, there are visually striking differences among the means of the groupings, particularly those with comorbidities. To confirm, an ANOVA was ran (Appendix 3-C) which was found to be be statistically significant (95% confidence, p = \<2e-16), warranting a Tukey's HSD for further investigation. Of 21 pairings, 13 were found to be statistically significant to a 95% confidence level, meaning BMI could have an impact. It appears to have the most impact on "CRC-H" (5 pairings), "Other" (4 pairings), and "CRC" (4 pairings). BMI and age are also known to influence each other, thus it was decided to check if there would be any clustering or relationship visible when plotted against one another, shown in Figure 2-B. Associated linear models were conducted for each CRC progression classifier to check for potential relationships, which are also represented on the scatter plots (Appendix 3-D). Results of the age-centered, linear regression modelling shows a very low R-squared value of 0.0707, meaning that BMI and age only explains about 7% of the variance, though there are a few relationships that show statistical significance to a 95% confidence level, such as in "CRC-H" and "Other". With such low explanation of the variance, it would be interesting to see how this might extend or not towards the taxa and pathway relationships in the gut microbiome.
 
-```{r}
+```{r, echo=FALSE}
 #| label: BMI Associations
 #| fig-width: 14
 #| fig-height: 7
@@ -361,7 +361,7 @@ bmi1 + bmi2 +
   ) &
   theme(
         plot.title = element_text(hjust = 0, size = 14),
-        plot.caption = element_text(hjust = 0, size = 11), 
+        plot.caption = element_text(hjust = 0, size = 12), 
         legend.key.size = unit(0.5, "cm"), 
         legend.title = element_text(size = 10), 
         legend.direction = "horizontal"
